# final-project

./: .env.dev  .gitignore  docker-compose.yml  readme.md
auth-service/: .dockerignore  .gitignore  alembic.ini  dockerfile  entrypoint.sh  pyproject.toml  run_migrations.sh
auth-service/alembic/: env.py
auth-service/src/: exception.py  main.py  settings.py
auth-service/src/api/: dependencies.py  endpoints.py
auth-service/src/core/: models.py  repository.py  service.py
auth-service/src/database/postgres/: models.py  session.py
auth-service/src/database/redis/: session.py  utils.py
auth-service/src/impl/: repository.py  service.py
auth-service/src/security/: jwt.py  password.py
checker-service/: .dockerignore  dockerfile  pyproject.toml
checker-service/alembic/: env.py
checker-service/src/: main.py  settings.py
checker-service/src/api/: dependencies.py  endpoints.py  rabbitmq.py
checker-service/src/core/: models.py  repositories.py  services.py
checker-service/src/database/postgres/: models.py
checker-service/src/impl/: repositories.py  services.py
permission-service/: dockerfile  entrypoint.sh  pyproject.toml
permission-service/alembic/: env.py
permission-service/src/: main.py  settings.py
permission-service/src/api/: dependencies.py  endpoints.py  rabbitmq.py
permission-service/src/core/: models.py  repositories.py  services.py
permission-service/src/database/: models.py
permission-service/src/database/postgres/: models.py  session.py
permission-service/src/impl/: repositories.py  services.py
